# yeb_app_template

./: .git 2  .gitignore  .metadata  737calcs.code-workspace  CONTRIBUTORS.md  LICENSE  README.md  bootstrap.sh  configure_vscode.sh  init_project.bat  init_project.sh  macos_setup.sh  migrate_python_structure.sh  package_python_scripts.sh  pubspec.yaml  reload_vscode.sh  run_dev.bat  run_dev.sh  run_dev_direct.sh  run_dev_environment.sh  setup_project.bat  setup_project.sh  setup_template.bat  setup_template.sh  start_web_dev.sh  start_web_integrated.bat  start_web_integrated.sh  sync_python_scripts.sh  test_web_app.sh  update_docs.sh  workload.md  workload.md.new  wsl_flutter_windows_setup.sh  yeb_app_template.code-workspace
.copilot/: README.md  chat_resume.md  instructions.md  memoire_long_terme.md  methodologie_temp.md
.github/: copilot-instructions.md  template-config.yml
.project_config/: env_setup.bat  env_setup.sh
archived_backends/: start_web_dev.sh.old
archived_scripts/: run_dev_direct.sh
archived_tests/: widget_test.dart
docs/: bootstrap.md  chat_resume.md  chat_resume_template_example.md  ci_guide.md  contributing.md  extending_python.md  git_github_integration.md  git_workflow.md  github_auto_setup.md  github_branch_protection.md  installation.md  markdown_style_guide.md  modes_demarrage.md  packaging_approach.md  path_management.md  project_structure.md  roadmap.md  script_organization.md  setup_template.md  testing.md  wsl_connections.md  wsl_optimisation.md
flutter_app/: .metadata  pubspec.yaml
lib/: main.dart
python_backend/: pyproject.toml
python_backend/python_backend/: calculs.py
python_backend/tests/: test_basic.py
scripts/: check_prerequisites.bat  check_prerequisites.sh  cleanup_init_files.bat  cleanup_init_files.sh  configure_vscode_for_flutter.bat  configure_vscode_for_flutter.sh  flutter_wrapper.sh  flutter_wrapper_macos.sh  git_autocommit.bat  git_autocommit.sh  setup.bat  (+12 more)
shared_python/: README.md  __init__.py  calcul_demo.py  pyproject.toml  pytest.ini  web_adapter.py
shared_python/calculs/: calcul_demo.py
shared_python/scripts/: __init__.py  analyse_data.py  calcul_demo.py
shared_python/tests/: __init__.py  test_analyse_data.py  test_calcul_demo.py
web_backend/: README.md  main.py  pyproject.toml  start_server.sh
web_backend/tests/: test_basic.py
(+89 files in other folders)
