[tool.poetry]
name = "python_backend"
version = "0.1.0"
description = "Backend de calculs Python pour 737calcs"
authors = ["Ton Nom <ton.email@example.com>"]


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
