[tool.poetry]
name = "web_backend"
version = "0.1.0"
description = "API Web pour 737calcs"
authors = ["Votre Nom <votre.email@example.com>"]
packages = [{include = "*.py"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = "^2.6.0"
importlib-metadata = "^7.0.0"
typing-extensions = "^4.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
